# Sudoku_hra

./: CMakeLists.txt  sudoku01.txt  sudoku2.txt
Sudoku_hra/: CMakeLists.txt  Sudoku_game.cpp  Sudoku_hra.cpp  Sudoku_hra.h  highscore.cpp  highscore.h  sudoku1.txt
